last commit of the day'

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <td class="90sss">$300</a></td>
         <td class="rnr3">$300</a></td>
         <td class="gameSSS">$300</a></td>
-        <td><a id="value" href="./questions/question15.html">$300</a></td>
+        <td class="horrorMOVie">$300</a></td>
     </tr>
         <td onclick="add400">$400</a></td>
         <td><a id="value" href="./questions/question17.html">$400</a></td>
