made some changes

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 </head>
 <script> document.write(<h1>"Welcome to my site") </script>
 
-<body>
-    <img src="https://vignette1.wikia.nocookie.net/gameshows/images/e/e1/Big_Black_Jeopardy_Logo.png/revision/latest?cb=20130222025917">
+</body>
     
     <table align="center" border="1" width="1000" id="fixedheight">
         <tbody>
