--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
 </head>
 <script> document.write(<h1>"Welcome to my site") </script>
 
-</body>
+
+<body>
+    <img src="https://vignette1.wikia.nocookie.net/gameshows/images/e/e1/Big_Black_Jeopardy_Logo.png/revision/latest?cb=20130222025917">
     
     <table align="center" border="1" width="1000" id="fixedheight">
         <tbody>
-    <tr>
+    <tr class="cat">
     <td>Movie Trivia</td><td>1990s Metal</td><td>Rap and Rock</td><td>Games of the 00s</td><td>What's a Horror Movie?</td>
-    </tr>
+    </tr class="amount">
         <td class="mT">$100</a></td>
         <td class="90s">$100</a></td>
         <td class="rnr">$100</a></td>
