add amount class

--- a/index.html
+++ b/index.html
@@ -15,19 +15,22 @@
         <tbody>
     <tr class="cat">
     <td>Movie Trivia</td><td>1990s Metal</td><td>Rap and Rock</td><td>Games of the 00s</td><td>What's a Horror Movie?</td>
-    </tr class="amount">
+    </tr>
+    <tr class="amount">
         <td class="mT">$100</a></td>
         <td class="90s">$100</a></td>
         <td class="rnr">$100</a></td>
         <td class="gameS">$100</a></td>
         <td class="horrorMovie">$100</a></td> 
     </tr>
+    <tr class="amount">
         <td class="mTT">$200</a></td>
         <td class="90ss">$200</a></td>
         <td class="rnr2">$200</a></td>
         <td class="gameSS">$200</a></td>
         <td class="horrorMOvie">$200</a></td>
     </tr>
+    <tr class="amount">
         <td class="mTTT">$300</a></td>
         <td class="90sss">$300</a></td>
         <td class="rnr3">$300</a></td>
