--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </tr>
     </tbody>
     </table>
-        <audio></audio> id="" "src"= </audio>
+        <audio id="fightsong" src= "fightsong.mp3" autoplay hidden loop ></audio>
     <div class="top-right"></div><h1>Score: <span id="score">0</span></h1></div>
     
 
