more classes again

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <td class="gameSSS">$300</a></td>
         <td class="horrorMOVie">$300</a></td>
     </tr>
-    <tr>
+    <tr class="amount">
         <td class="mTTTT">$400</a></td>
         <td class="90ssss">$400</a></td>
         <td class="rnr4">$400</a></td>
