--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
     </tr>
     </tbody>
     </table>
-        <audio id="fightsong" src= "fightsong.mp3" autoplay hidden loop ></audio>
+        <audio id="Curb" src= "Curb.mp3"></audio>
+        <audio id="Seinfeld" src= "Seinfeld.mp3"></audio>
     <div class="top-right"></div><h1>Score: <span id="score">0</span></h1></div>
     
 
